--- a/THANKS
+++ b/THANKS
@@ -13,6 +13,8 @@ Alexandre Oliva <oliva@dcc.unicamp.br>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
+H.J. Lu <hjl@lucon.org>
+Ian Lance Taylor <ian@cygnus.com>
 Joel Cannon <cannon@alpha.centenary.edu>
 Joel N. Weber II <devnull@gnu.ai.mit.edu>
 Karl Berry <kb@cs.umb.edu>
